# connect4evolution

./: .gitignore  pyproject.toml
connect4evolution/: __init__.py  cli.py
connect4evolution/environment/: board.py  player.py  renderer.py  state.py
connect4evolution/sparse_q_learning/: __init__.py  agent.py  config.py  memory.py  trainer.py  training_config.py
examples/: play_game.py
utils/: test_mps.py
